--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7106,6 +7106,71 @@ let result=validUtf8(data);
 console.log(result);
 ```
 
+396. 旋转函数
+给定一个长度为 n 的整数数组 nums 。
+
+假设 arrk 是数组 nums 顺时针旋转 k 个位置后的数组，我们定义 nums 的 旋转函数  F 为：
+
+F(k) = 0 * arrk[0] + 1 * arrk[1] + ... + (n - 1) * arrk[n - 1]
+返回 F(0), F(1), ..., F(n-1)中的最大值 。
+
+生成的测试用例让答案符合 32 位 整数。
+
+超时做法
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxRotateFunction = function(nums) {
+    let n=nums.length;
+    let maxSum=Number.NEGATIVE_INFINITY;
+    let sum;
+    for(let i=0;i<n;i++){
+        sum=0;
+        for(let j=0;j+i<n;j++){
+            sum+=(j+i)*nums[j];
+        }
+        for(let k=0;k<i;k++){
+            sum+=k*nums[n-i+k];
+        }
+        console.log(sum);
+        maxSum=maxSum>sum ? maxSum : sum;
+    }
+    return maxSum;
+};
+
+let data = [4,3,2,6];
+let result=maxRotateFunction(data);
+console.log(result);
+```
+
+2
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxRotateFunction = function(nums) {
+    let n=nums.length;
+    let sum=0,numSum=0;
+    for(let i=0;i<n;i++){
+        sum+=i*nums[i];
+        numSum+=nums[i];
+        
+    }
+    let maxSum=sum;
+    for (let i=n-1;i>0;i--){
+        //找到迭代公式,f1,f2,f3...fn的关系
+        sum+=numSum-n*nums[i];
+        maxSum=maxSum>sum ? maxSum : sum;
+    }
+    return maxSum;
+};
+```
+
 
 
 ## 401. 二进制手表
