--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8448,6 +8448,86 @@ let result=nearestPalindromic(n);
 console.log(result);
 ```
 
+## 587.安装栅栏
+
+在一个二维的花园中，有一些用 (x, y) 坐标表示的树。由于安装费用十分昂贵，你的任务是先用最短的绳子围起所有的树。只有当所有的树都被绳子包围时，花园才能围好栅栏。你需要找到正好位于栅栏边界上的树的坐标。
+
+ 
+
+注意:
+
+所有的树应当被围在一起。你不能剪断绳子来包围树或者把树分成一组以上。
+输入的整数在 0 到 100 之间。
+花园至少有一棵树。
+所有树的坐标都是不同的。
+输入的点没有顺序。输出顺序也没有要求。
+
+```
+/**
+ * @param {number[][]} trees
+ * @return {number[][]}
+ */
+var outerTrees = function(trees) {
+
+};
+
+let trees= [[1,1],[2,2],[2,0],[2,4],[3,3],[4,2]];
+let result=outerTrees(trees);
+console.log(result);
+```
+
+```
+var outerTrees = function(trees) {
+    const n = trees.length;
+    if (n < 4) {
+        return trees;
+    }
+    let leftMost = 0;
+    for (let i = 0; i < n; i++) {
+        if (trees[i][0] < trees[leftMost][0]) {
+            leftMost = i;
+        }
+    }
+
+    const res = [];
+    const visit = new Array(n).fill(0);
+    let p = leftMost;
+    do {
+        let q = (p + 1) % n;
+        for (let r = 0; r < n; r++) {
+            /* 如果 r 在 pq 的右侧，则 q = r */ 
+            if (cross(trees[p], trees[q], trees[r]) < 0) {
+                q = r;
+            }
+        }
+        /* 是否存在点 i, 使得 p 、q 、i 在同一条直线上 */
+        for (let i = 0; i < n; i++) {
+            if (visit[i] || i === p || i === q) {
+                continue;
+            }
+            if (cross(trees[p], trees[q], trees[i]) === 0) {
+                res.push(trees[i]);
+                visit[i] = true;
+            }
+        }
+        if  (!visit[q]) {
+            res.push(trees[q]);
+            visit[q] = true;
+        }
+        p = q;
+    } while (p !== leftMost);
+    return res;
+}
+
+const cross = (p, q, r) => {
+    return (q[0] - p[0]) * (r[1] - q[1]) - (q[1] - p[1]) * (r[0] - q[0]);
+};
+
+
+```
+
+
+
 ## 589. N 叉树的前序遍历
 
 给定一个 n 叉树的根节点  root ，返回 其节点值的 前序遍历 。
