--- a/数据结构与算法/排序算法.md
+++ b/数据结构与算法/排序算法.md
@@ -326,3 +326,350 @@ console.log(result);
 ------
 
 ## 快速排序
+
+快速排序是由东尼·霍尔所发展的一种排序算法。在平均状况下，排序 n 个项目要 Ο(nlogn) 次比较。在最坏状况下则需要 Ο(n2) 次比较，但这种状况并不常见。事实上，快速排序通常明显比其他 Ο(nlogn) 算法更快，因为它的内部循环（inner loop）可以在大部分的架构上很有效率地被实现出来。
+
+快速排序使用分治法（Divide and conquer）策略来把一个串行（list）分为两个子串行（sub-lists）。
+
+快速排序又是一种分而治之思想在排序算法上的典型应用。本质上来看，快速排序应该算是在冒泡排序基础上的递归分治法。
+
+快速排序的名字起的是简单粗暴，因为一听到这个名字你就知道它存在的意义，就是快，而且效率高！它是处理大数据最快的排序算法之一了。虽然 Worst Case 的时间复杂度达到了 O(n²)，但是人家就是优秀，在大多数情况下都比平均时间复杂度为 O(n logn) 的排序算法表现要更好，可是这是为什么呢，我也不知道。好在我的强迫症又犯了，查了 N 多资料终于在《算法艺术与信息学竞赛》上找到了满意的答案：
+
+> 快速排序的最坏运行情况是 O(n²)，比如说顺序数列的快排。但它的平摊期望时间是 O(nlogn)，且 O(nlogn) 记号中隐含的常数因子很小，比复杂度稳定等于 O(nlogn) 的归并排序要小很多。所以，对绝大多数顺序性较弱的随机数列而言，快速排序总是优于归并排序。
+
+### 1. 算法步骤
+
+1. 从数列中挑出一个元素，称为 "基准"（pivot）;
+2. 重新排序数列，所有元素比基准值小的摆放在基准前面，所有元素比基准值大的摆在基准的后面（相同的数可以到任一边）。在这个分区退出之后，该基准就处于数列的中间位置。这个称为分区（partition）操作；
+3. 递归地（recursive）把小于基准值元素的子数列和大于基准值元素的子数列排序；
+
+### 2. 动图演示
+
+![quickSort](E:\pogject\学习笔记\image\算法\quickSort.gif)
+
+### 3.JavaScript 代码实现
+
+```js
+function quickSort(arr,left,right){
+    //快速排序
+    let n=arr.length;
+    let partitionIndex;
+    left=typeof left !=="number" ? 0 : left;
+    right=typeof right !=="number" ? n-1 : right;
+
+    if (left<right) {
+        partitionIndex=partition(arr,left,right);
+        quickSort(arr,left,partitionIndex-1);
+        quickSort(arr,partitionIndex+1,right);
+    }
+    return arr;
+}
+
+function partition(arr,left,right){  // 分区操作
+    let pivot=left;   // 设定基准值（pivot）
+    let index=pivot+1;
+    for(let i=index;i<=right;i++){
+        if (arr[i]<arr[pivot]) {
+            swap(arr,i,index);
+            index++;
+        }
+    }
+    swap(arr,pivot,index-1);
+    return index-1;
+}
+
+function swap(arr,i,j){
+    let temp=arr[i];
+    arr[i]=arr[j];
+    arr[j]=temp;
+}
+
+
+let test=[2,4,1,6,5,8,9,3,7,0];
+let result=quickSort(test);
+console.log(result);
+```
+
+```js
+function partition2(arr, low, high) {
+  let pivot = arr[low];
+  while (low < high) {
+    while (low < high && arr[high] > pivot) {
+      --high;
+    }
+    arr[low] = arr[high];
+    while (low < high && arr[low] <= pivot) {
+      ++low;
+    }
+    arr[high] = arr[low];
+  }
+  arr[low] = pivot;
+  return low;
+}
+
+function quickSort2(arr, low, high) {
+  if (low < high) {
+    let pivot = partition2(arr, low, high);
+    quickSort2(arr, low, pivot - 1);
+    quickSort2(arr, pivot + 1, high);
+  }
+  return arr;
+}
+```
+
+
+
+------
+
+## 堆排序
+
+堆排序（Heapsort）是指利用堆这种数据结构所设计的一种排序算法。堆积是一个近似完全二叉树的结构，并同时满足堆积的性质：即子结点的键值或索引总是小于（或者大于）它的父节点。堆排序可以说是一种利用堆的概念来排序的选择排序。分为两种方法：
+
+1. 大顶堆：每个节点的值都大于或等于其子节点的值，在堆排序算法中用于升序排列；
+2. 小顶堆：每个节点的值都小于或等于其子节点的值，在堆排序算法中用于降序排列；
+
+堆排序的平均时间复杂度为 Ο(nlogn)。
+
+### 1. 算法步骤
+
+1. 创建一个堆 H[0……n-1]；
+2. 把堆首（最大值）和堆尾互换；
+3. 把堆的尺寸缩小 1，并调用 shift_down(0)，目的是把新的数组顶端数据调整到相应位置；
+4. 重复步骤 2，直到堆的尺寸为 1。
+
+### 2. 动图演示
+
+![heapSort](E:\pogject\学习笔记\image\算法\heapSort.gif)
+
+### 3.JavaScript 代码实现
+
+```js
+var len;    // 因为声明的多个函数都需要数据长度，所以把len设置成为全局变量
+
+function buildMaxHeap(arr){
+    //建立大顶堆
+    len=arr.length;
+    for (let i=Math.floor(len/2);i>=0;i--){
+        heapify(arr,i);
+    }
+}
+
+function heapify(arr,i){
+    //堆调整
+    let left=2*i+1;
+    let right=2*i+2;
+    let largest=i;
+    if (left<len && arr[left]>arr[largest]) {
+        largest=left;
+    }
+    if (right<len && arr[right] > arr[largest]) {
+        largest=right;
+    }
+
+    if (largest!==i) {
+        swap(arr,i,largest);
+        heapify(arr,largest);
+    }
+}
+
+function swap(arr,i,j){
+    let temp=arr[i];
+    arr[i]=arr[j];
+    arr[j]=temp;
+}
+
+function heapSort(arr){
+    //堆排序
+    buildMaxHeap(arr);
+    for(let i=arr.length-1;i>0;i--){
+        swap(arr,0,i);
+        len--;
+        heapify(arr,0);
+    }
+    return arr;
+}
+
+
+let test=[2,4,1,6,5,8,9,3,7,0];
+let result=heapSort(test);
+console.log(result);
+```
+
+------
+
+## 计数排序
+
+计数排序的核心在于将输入的数据值转化为键存储在额外开辟的数组空间中。作为一种线性时间复杂度的排序，计数排序要求输入的数据必须是有确定范围的整数。
+
+\1. 计数排序的特征
+
+当输入的元素是 n 个 0 到 k 之间的整数时，它的运行时间是 Θ(n + k)。计数排序不是比较排序，排序的速度快于任何比较排序算法。
+
+由于用来计数的数组C的长度取决于待排序数组中数据的范围（等于待排序数组的最大值与最小值的差加上1），这使得计数排序对于数据范围很大的数组，需要大量时间和内存。例如：计数排序是用来排序0到100之间的数字的最好的算法，但是它不适合按字母顺序排序人名。但是，计数排序可以用在基数排序中的算法来排序数据范围很大的数组。
+
+通俗地理解，例如有 10 个年龄不同的人，统计出有 8 个人的年龄比 A 小，那 A 的年龄就排在第 9 位,用这个方法可以得到其他每个人的位置,也就排好了序。当然，年龄有重复时需要特殊处理（保证稳定性），这就是为什么最后要反向填充目标数组，以及将每个数字的统计减去 1 的原因。
+
+###  1.算法的步骤
+
+- （1）找出待排序的数组中最大和最小的元素
+- （2）统计数组中每个值为i的元素出现的次数，存入数组C的第i项
+- （3）对所有的计数累加（从C中的第一个元素开始，每一项和前一项相加）
+- （4）反向填充目标数组：将每个元素i放在新数组的第C(i)项，每放一个元素就将C(i)减去1
+
+### 2. 动图演示
+
+![countingSort](E:\pogject\学习笔记\image\算法\countingSort.gif)
+
+### 3.JavaScript 代码实现
+
+```js
+function countingSort(arr, maxValue) {
+    var bucket = new Array(maxValue+1),
+        sortedIndex = 0;
+        arrLen = arr.length,
+        bucketLen = maxValue + 1;
+
+    for (var i = 0; i < arrLen; i++) {
+        if (!bucket[arr[i]]) {
+            bucket[arr[i]] = 0;
+        }
+        bucket[arr[i]]++;
+    }
+
+    for (var j = 0; j < bucketLen; j++) {
+        while(bucket[j] > 0) {
+            arr[sortedIndex++] = j;
+            bucket[j]--;
+        }
+    }
+
+    return arr;
+}
+```
+
+
+
+------
+
+## 桶排序
+
+桶排序是计数排序的升级版。它利用了函数的映射关系，高效与否的关键就在于这个映射函数的确定。为了使桶排序更加高效，我们需要做到这两点：
+
+1. 在额外空间充足的情况下，尽量增大桶的数量
+2. 使用的映射函数能够将输入的 N 个数据均匀的分配到 K 个桶中
+
+同时，对于桶中元素的排序，选择何种比较排序算法对于性能的影响至关重要。
+
+### 1. 什么时候最快
+
+当输入的数据可以均匀的分配到每一个桶中。
+
+### 2. 什么时候最慢
+
+当输入的数据被分配到了同一个桶中。
+
+### 3. 示意图
+
+元素分布在桶中：
+
+![img](https://www.runoob.com/wp-content/uploads/2019/03/Bucket_sort_1.svg_.png)
+
+然后，元素在每个桶中排序：
+
+![img](https://www.runoob.com/wp-content/uploads/2019/03/Bucket_sort_2.svg_.png)
+
+### 3.JavaScript 代码实现
+
+```js
+function bucketSort(arr, bucketSize) {
+    if (arr.length === 0) {
+      return arr;
+    }
+
+    var i;
+    var minValue = arr[0];
+    var maxValue = arr[0];
+    for (i = 1; i < arr.length; i++) {
+      if (arr[i] < minValue) {
+          minValue = arr[i];                // 输入数据的最小值
+      } else if (arr[i] > maxValue) {
+          maxValue = arr[i];                // 输入数据的最大值
+      }
+    }
+
+    //桶的初始化
+    var DEFAULT_BUCKET_SIZE = 5;            // 设置桶的默认数量为5
+    bucketSize = bucketSize || DEFAULT_BUCKET_SIZE;
+    var bucketCount = Math.floor((maxValue - minValue) / bucketSize) + 1;  
+    var buckets = new Array(bucketCount);
+    for (i = 0; i < buckets.length; i++) {
+        buckets[i] = [];
+    }
+
+    //利用映射函数将数据分配到各个桶中
+    for (i = 0; i < arr.length; i++) {
+        buckets[Math.floor((arr[i] - minValue) / bucketSize)].push(arr[i]);
+    }
+
+    arr.length = 0;
+    for (i = 0; i < buckets.length; i++) {
+        insertionSort(buckets[i]);                      // 对每个桶进行排序，这里使用了插入排序
+        for (var j = 0; j < buckets[i].length; j++) {
+            arr.push(buckets[i][j]);                      
+        }
+    }
+
+    return arr;
+}
+```
+
+------
+
+## 基数排序
+
+基数排序是一种非比较型整数排序算法，**其原理是将整数按位数切割成不同的数字，然后按每个位数分别比较**。由于整数也可以表达字符串（比如名字或日期）和特定格式的浮点数，所以基数排序也不是只能使用于整数。
+
+### 1. 基数排序 vs 计数排序 vs 桶排序
+
+基数排序有两种方法：
+
+这三种排序算法都利用了桶的概念，但对桶的使用方法上有明显差异：
+
+- 基数排序：根据键值的每位数字来分配桶；
+- 计数排序：每个桶只存储单一键值；
+- 桶排序：每个桶存储一定范围的数值；
+
+### 2. LSD 基数排序动图演示
+
+![radixSort](E:\pogject\学习笔记\image\算法\radixSort.gif)
+
+### 3.JavaScript 代码实现
+
+```js
+//LSD Radix Sort
+var counter = [];
+function radixSort(arr, maxDigit) {
+    var mod = 10;
+    var dev = 1;
+    for (var i = 0; i < maxDigit; i++, dev *= 10, mod *= 10) {
+        for(var j = 0; j < arr.length; j++) {
+            var bucket = parseInt((arr[j] % mod) / dev);
+            if(counter[bucket]==null) {
+                counter[bucket] = [];
+            }
+            counter[bucket].push(arr[j]);
+        }
+        var pos = 0;
+        for(var j = 0; j < counter.length; j++) {
+            var value = null;
+            if(counter[j]!=null) {
+                while ((value = counter[j].shift()) != null) {
+                      arr[pos++] = value;
+                }
+          }
+        }
+    }
+    return arr;
+}
+```
+
